# openhuman

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  package.json  plan.md  pnpm-lock.yaml
.claude/: memory.md
.github/: tauri-cef-expected-sha
.github/workflows/: android-compile.yml  build-ci-image.yml  build-desktop.yml  ci-full.yml  ci-lite.yml  e2e-agent-review.yml  e2e-playwright.yml  e2e-reusable.yml  ios-appstore.yml  ios-compile.yml  pr-ci.yml  pr-quality.yml  promote-main-to-release.yml  release-ci.yml  release-notes-preview.yml  release-packages.yml  release-production.yml  release-staging.yml  tauri-cef-pin-guard.yml  test-reusable.yml
.husky/: pre-push
app/: package.json  tailwind.config.js
app/scripts/: e2e-run-all-flows.sh  e2e-run-shards.sh
app/src/: App.tsx  AppRoutes.tsx
app/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
app/src-tauri/profiling/: Cargo.toml  README.md
app/src-tauri/profiling/src/: main.rs
app/test/: core-rpc-node.test.ts  wdio.conf.ts
docs/: README.de.md  README.ja-JP.md  README.ko.md  README.ur-pk.md  README.zh-CN.md  RELEASE-MANUAL-SMOKE.md  TEST-COVERAGE-MATRIX.md  arch-subconscious.md  flows-agent-friendliness-audit.md  harness-comparison-2026-07-22.md  library-benchmarking.md  library-minimal-recipe.md  resource-profiling-session-2026-07-21.md  tauri-live-profiling-brief.md  tinyagents-drift-ledger.md  tinyagents-inference-migration-plan.md  tinyagents-migration-plan-2026-07-22.md  tinyagents-phase3-router-registry-design.md  tinyagents-port-plan.md  tinycortex-api-gap-audit.md  tinycortex-drift-ledger.md  tinycortex-memory-migration-plan.md  tinycortex-migration-plan-2026-07-22.md  tinycortex-migration-spec.md  tinycortex-parity-checklist.md
docs/plans/: conversations-timeline-refactor.md  tinyflows-node-io-and-agent-kinds.md  transcript-derived-view.md  tui-chat-plan.md
docs/tinyagents-full-migration-plan/: 99-deletion-ledger.md  C4-journal-progress-parity-plan.md  HANDOFF-2026-07-03.md
e2e/tinyplace-messaging/: README.md  messaging.e2e.mjs  run-ui.sh  run.sh
examples/: embed_headless.rs
gitbooks/: README.md
gitbooks/developing/: README.md  agent-observability.md  agentbox-deployment.md  architecture.md  cef.md  getting-set-up.md  mcp-server.md  release-policy.md  testing-strategy.md  theming.md
gitbooks/features/: approval-gate.md  billing-and-usage.md  channels.md  cloud-deploy.md  goals-and-todos.md  ios-companion.md  notifications-and-activity.md  orchestration.md  os-keyring-and-secret-storage.md  personalization.md  platform.md  privacy-and-security.md  privacy-mode.md  screen-intelligence.md  subconscious.md  super-context.md  theming.md  tinyplace.md  token-compression.md  wallet.md  workflows.md
gitbooks/guides/: README.md  child-safe-companion.md  connect-obsidian.md  doctor-assistant.md  local-model.md  move-to-new-pc.md  organize-project-folders.md  personal-assistant.md  privacy-sensitive-data.md  recover-failed-installation.md
gitbooks/overview/: getting-started.md  troubleshooting-sign-in.md
scripts/: check-pr-checklist.mjs  generate-test-inventory.mjs  i18n-find-english.ts
scripts/__tests__/: check-pr-checklist.test.mjs  feature-forwarding.test.mjs  generate-release-notes.test.mjs
scripts/ci/: check-feature-forwarding.mjs
scripts/lib/: feature-forwarding.mjs
scripts/mock-api/: server.mjs
scripts/profile/: README.md  library-bench.sh  library-cpu.sh  library-fleet.sh  library-heap.sh  library-instances.sh  library-pool-gate.sh
scripts/release/: generate-release-notes.mjs  strip-appimage-graphics-libs.sh  test-strip-appimage-rpaths.sh
src/: lib.rs  main.rs
src/api/: config.rs  jwt.rs  mod.rs  rest.rs  rest_tests.rs
src/core/: agent_cli.rs  all.rs  all_tests.rs  auth.rs  autocomplete_cli_adapter.rs  cli.rs  cli_tests.rs  dispatch.rs  http_server_status.rs  jsonrpc.rs  jsonrpc_tests.rs  legacy_aliases.rs  log_redaction.rs  logging.rs  mod.rs  observability.rs  shutdown.rs  socketio.rs  subconscious_cli.rs
src/openhuman/: mod.rs
src/rpc/: mod.rs
tests/: agent_harness_e2e.rs  agent_harness_raw_coverage_e2e.rs  agent_prompts_subagent_raw_coverage_e2e.rs  agent_retrieval_e2e.rs  agent_session_turn_raw_coverage_e2e.rs  agentbox_e2e.rs  channels_bus_presentation_raw_coverage_e2e.rs  channels_host_boundary_e2e.rs  channels_lark_email_dispatch_round21_raw_coverage_e2e.rs  coding_sessions_feature.rs  composio_list_tools_stack_overflow_regression.rs  config_auth_app_state_connectivity_e2e.rs  inference_agent_raw_coverage_e2e.rs  inference_compatible_admin_leftovers_raw_coverage_e2e.rs  inference_provider_e2e.rs  inference_provider_raw_coverage_e2e.rs  json_rpc_e2e.rs  keyring_secretstore_e2e.rs  mcp_registry_e2e.rs  mcp_registry_multi_server.rs  mcp_setup_e2e.rs  mcp_stdio_integration.rs  medulla_local_e2e.rs  memory_golden_parity_e2e.rs  memory_raw_coverage_e2e.rs  memory_threads_raw_coverage_e2e.rs  monitor_agent_e2e.rs  orchestration_effect_executor_e2e.rs  orchestration_shadow_push_e2e.rs  orchestrator_parallel_fanout_routing.rs  orchestrator_thread_list_wiring.rs  personality_e2e.rs  subconscious_conversation_e2e.rs  tokenjuice_integration.rs  tool_registry_approval_raw_coverage_e2e.rs  transcript_search_e2e.rs  web_cancel_request_scoping.rs  worker_b_raw_coverage_e2e.rs
tests/raw_coverage/: agent_harness_leftovers_raw_coverage_e2e.rs  agent_prompts_subagent_raw_coverage_e2e.rs  agent_round26_raw_coverage_e2e.rs  agent_session_round24_raw_coverage_e2e.rs  channels_bus_presentation_raw_coverage_e2e.rs  channels_large_round25_raw_coverage_e2e.rs  channels_provider_deep_raw_coverage_e2e.rs  channels_provider_leftovers_raw_coverage_e2e.rs  channels_runtime_raw_coverage_e2e.rs  channels_web_startup_raw_coverage_e2e.rs  channels_web_telegram_raw_coverage_e2e.rs  channels_web_yuanbao_round22_raw_coverage_e2e.rs  composio_credentials_state_raw_coverage_e2e.rs  inference_agent_raw_coverage_e2e.rs  inference_compatible_admin_leftovers_raw_coverage_e2e.rs  inference_compatible_matrix_raw_coverage_e2e.rs  (+16 more)
(+1696 files in other folders)
